Added Media Queries

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
             <div class="nav-cart border">
                 <i class="fa-solid fa-cart-shopping"></i>
-                Cart
+                <p>Cart</p>
             </div>
         </div>
         
